--- a/blocks/cards/card-cirlce-image.css
+++ b/blocks/cards/card-cirlce-image.css
@@ -14,10 +14,6 @@
       gap:10px;
     }
 
-    .card:hover img {
-      transform: none;
-    }
-
     .card>div {
       display: flex;
       align-items: center;
@@ -39,6 +35,11 @@
       margin-left: -15px;
     }
 
+    .card>.card-thumbnail {
+        width: auto;
+        height: auto;
+    }
+
     .card>.card-thumbnail a {
       display: block;
       pointer-events: none;
@@ -46,18 +47,35 @@
     }
 
     .card>.card-thumbnail a picture {
-      margin: 0 auto;
+        margin: 0 auto;
+      }
+
+    .card>.card-thumbnail.icon a picture {
+      width: 135px;
+      height: 135px;
+      border-radius: 50%;
     }
 
     .card>.card-thumbnail a img {
-      border-radius: 50%;
       position: relative;
       left: 0;
-      width: 135px;
-      height: 135px;
       object-fit: cover;
       filter: brightness(75%);
+      width: 135px;
+      height: 135px;
       max-width: fit-content;
+      border-radius: 50%;
+    }
+
+    .card>.card-thumbnail.icon a img {
+        border-radius: 0;
+        width: 100%;
+        height: 40%;
+        top: 30%;
+        margin: auto;
+        object-fit: contain;
+        color: white;
+        transform: none;
     }
 
     .card .card-body {
