--- a/blocks/cards/card-cirlce-image.css
+++ b/blocks/cards/card-cirlce-image.css
@@ -2,37 +2,37 @@
     margin: 20px 0;
 
     h3 {
-      font-family: var(--body-font-family);
-      font-size: var(--body-font-size-m);
-      font-weight: var(--font-weight-medium);
-      color: inherit;
+        font-family: var(--body-font-family);
+        font-size: var(--body-font-size-m);
+        font-weight: var(--font-weight-medium);
+        color: inherit;
     }
 
     .card {
-      padding: 25px 0;
-      display: flex;
-      gap:10px;
+        padding: 25px 0;
+        display: flex;
+        gap: 10px;
     }
 
     .card>div {
-      display: flex;
-      align-items: center;
-      gap: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
     }
 
     .card img::before {
-      display: inline-block;
-      width: auto;
-      height: auto;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      color: #888;
-      line-height: 1;
-      z-index: 2;
-      font-size: 2em;
-      margin-top: -25px;
-      margin-left: -15px;
+        display: inline-block;
+        width: auto;
+        height: auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        color: #888;
+        line-height: 1;
+        z-index: 2;
+        font-size: 2em;
+        margin-top: -25px;
+        margin-left: -15px;
     }
 
     .card>.card-thumbnail {
@@ -41,34 +41,29 @@
     }
 
     .card>.card-thumbnail a {
-      display: block;
-      pointer-events: none;
-      text-align: center;
+        position: relative;
+        display: block;
+        pointer-events: none;
+        text-align: center;
     }
 
     .card>.card-thumbnail a picture {
         margin: 0 auto;
-      }
-
-    .card>.card-thumbnail.icon a picture {
-      width: 135px;
-      height: 135px;
-      border-radius: 50%;
+        width: 135px;
+        height: 135px;
+        border-radius: 50%;
+        overflow: hidden;
     }
 
     .card>.card-thumbnail a img {
-      position: relative;
-      left: 0;
-      object-fit: cover;
-      width: 135px;
-      height: 135px;
-      max-width: fit-content;
-      border-radius: 50%;
+        position: relative;
+        left: 0;
+        object-fit: cover;
+        border-radius: 50%;
     }
 
     .card>.card-thumbnail.icon a img {
         border-radius: 0;
-        width: 100%;
         height: 40%;
         top: 30%;
         margin: auto;
@@ -78,22 +73,22 @@
     }
 
     .card .card-body {
-      display: flex;
-      position: relative;
+        display: flex;
+        position: relative;
     }
 
     .card .card-body h3 {
-      font-weight: var(--font-weight-extra-bold);
+        font-weight: var(--font-weight-extra-bold);
     }
 
     .card .card-body a,
     .card i.arrow {
-      display: none;
+        display: none;
     }
 
     /* just show the first a */
     .card .card-body a:first-of-type {
-      display: flex;
-      text-decoration: none;
+        display: flex;
+        text-decoration: none;
     }
-  }
+}
