--- a/templates/video-detail/video-detail.css
+++ b/templates/video-detail/video-detail.css
@@ -4,6 +4,7 @@
 
         > .section {
             padding: 0 15px;
+            width: 100%;
         }
 
         h2 {
@@ -15,6 +16,7 @@
         }
 
         &:last-of-type {
+            width: 100%;
             margin-top: 50px;
 
             .default-content-wrapper {
