--- a/blocks/subnav/subnav.css
+++ b/blocks/subnav/subnav.css
@@ -8,6 +8,14 @@
   .subnav {
     max-width: 1170px;
     margin: 0 auto;
+
+    @media(max-width:1200px) {
+      max-width: 990px;
+    }
+
+    @media(max-width:1024px) {
+      max-width: 750px;
+    }
   }
 
   ul {
