--- a/templates/common-core/common-core.css
+++ b/templates/common-core/common-core.css
@@ -6,7 +6,7 @@
   .wrapper {
     display: flex;
 
-    @media(max-width:760px) {
+    @media(width <= 760px) {
       display: block;
     }
 
@@ -14,7 +14,7 @@
       min-width: 270px;
       margin: 0 50px 50px 0;
 
-      @media(max-width:1024px) {
+      @media(width <= 1024px) {
         min-width: 200px;
       }
 
