--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -357,6 +357,70 @@ header .megamenu>.section-outer {
   margin: 0;
 }
 
+/* Search Bar */
+.search-bar-large.active {
+  display: block;
+  right: 351px;
+  left: unset;
+  background-color: unset;
+  max-width: 532px;
+  bottom: -55px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  position: absolute;
+
+  #supernav-search {
+    height: 60px;
+    display: inline;
+    font-size: 13px;
+    text-transform: uppercase;
+    margin-top: 0em;
+    unicode-bidi: isolate;
+
+    input {
+      background-color: #ffffff;
+      color: #000;
+      border-radius: 4px;
+      height: 100%;
+      padding: 5px 30px;
+      outline: none;
+      width: 100%;
+      border: none;
+      line-height: 50px;
+      font-size: 16px;
+    }
+
+    button {
+      background-color: #e21d46;
+      height: 100%;
+      width: 10%;
+      padding: 0;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+      right: 0;
+      position: absolute;
+      font-size: 20px;
+      color: #fff;
+      border: none;
+      top: 50%;
+      transform: translate(0, -50%);
+      display: inline-block;
+
+      em {
+        font-size: 0;
+      }
+
+      ::before { 
+        content: url("/icons/search.svg");
+        width: 20px;
+        height: 20px;
+        display: block;
+        margin: auto;
+      }
+    }
+  }
+}
+
 /* Header columns */
 .header .megamenu .columns-container {
   display: flex;
