--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -407,6 +407,7 @@ header .megamenu>.section-outer {
       top: 50%;
       transform: translate(0, -50%);
       display: inline-block;
+      cursor: pointer;
 
       em {
         font-size: 0;
@@ -1016,6 +1017,7 @@ nav[aria-expanded="false"] {
   header .nav-tools ul>li {
     margin-left: 10px;
     margin-right: 10px;
+    cursor: pointer;
   }
 
   header .nav-sections ul.primary-nav-items>li a,
