--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -117,6 +117,10 @@ header:not(.header-mobile) .nav-sections ul.primary-nav-items>li>a{
   transform: translateY(-50%);
 }
 
+header:not(.header-mobile) .nav-sections .nav-item.active > a {
+  color: var(--medium-light-gray);
+}
+
 header .nav-sections ul.primary-nav-items>li:not(.button-container)>a:not(.button)::after {
   content: url("/icons/solutions-right.svg");
   position: absolute;
@@ -134,7 +138,7 @@ header .nav-tools ul>li a.button {
 }
 
 header .nav-sections ul.primary-nav-items>li[aria-expanded="true"]>a {
-  color: var(--red);
+  color: var(--red) !important;
   border-bottom: 2px solid var(--red);
 }
 
@@ -351,6 +355,73 @@ header .megamenu>.section-outer {
   width: 20px;
   height: 20px;
   margin: 0;
+}
+
+/* Search Bar */
+.search-bar-large {
+  display: none;
+}
+
+.search-bar-large.active {
+  display: none;
+  right: 15%;
+  left: unset;
+  background-color: unset;
+  max-width: 532px;
+  bottom: -55px;
+  box-shadow: 0 0 20px var(--light-gray);
+  width: 100%;
+  position: absolute;
+
+  #supernav-search {
+    height: 60px;
+    display: block;
+    text-transform: uppercase;
+
+    input {
+      background-color: white;
+      border-radius: 4px;
+      height: 100%;
+      padding: 5px 30px;
+      outline: none;
+      width: 100%;
+      border: none;
+    }
+
+    input::placeholder {
+      font-weight: var(--font-weight-extra-bold);
+      color: var(--dark-gray);
+    }
+
+    button {
+      background-color: var(--red);
+      height: 100%;
+      width: 10%;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+      right: 0;
+      position: absolute;
+      font-size: 20px;
+      color:white;
+      border: none;
+      top: 50%;
+      transform: translate(0, -50%);
+      display: inline-block;
+      cursor: pointer;
+
+      em {
+        font-size: 0;
+      }
+
+      ::before { 
+        content: url("/icons/search-white.svg");
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+        margin: auto;
+      }
+    }
+  }
 }
 
 /* Header columns */
@@ -871,6 +942,10 @@ nav[aria-expanded="false"] {
     display: flex;
   }
 
+  .search-bar-large.active {
+    display: block;
+  }
+
   header .nav-brand {
     width: 220px;
   }
@@ -942,6 +1017,7 @@ nav[aria-expanded="false"] {
   header .nav-tools ul>li {
     margin-left: 10px;
     margin-right: 10px;
+    cursor: pointer;
   }
 
   header .nav-sections ul.primary-nav-items>li a,
@@ -969,5 +1045,9 @@ nav[aria-expanded="false"] {
 @media (width >=1660px) {
   header nav {
     max-width: 1527px;
+  }
+
+  .search-bar-large {
+    right: 20%;
   }
 }
