--- a/blocks/reviews-filter/reviews-filter.css
+++ b/blocks/reviews-filter/reviews-filter.css
@@ -20,8 +20,12 @@
     padding: 0 10px;
 
     & .card {
-        margin-bottom: 20px;
+        padding-bottom: 20px;
         border-top: 1px solid #eee;
+
+        &:last-of-type {
+            border-bottom: 1px solid #eee;
+        }
     }
 }
 
