--- a/styles/styles.css
+++ b/styles/styles.css
@@ -520,8 +520,10 @@ body.purple {
     background-color: var(--purple);
     }
 
-  .news-filter-container h3, .news-filter-container a, .news-filter-container p>strong, .news-filter-container strong>p {
-    color: var(--purple);
+  .news-filter-container, .reviews-filter-container {
+    h3, a, p>strong, strong>p {
+      color: var(--purple);
+    }
   }
 }
 
