--- a/blocks/reviews-filter/reviews-filter.css
+++ b/blocks/reviews-filter/reviews-filter.css
@@ -21,19 +21,20 @@
 
     & .card {
         padding-bottom: 20px;
-        border-top: 1px solid #eee;
+        border-top: 1px solid var(--light-gray);
+    }
 
-        &:last-of-type {
-            border-bottom: 1px solid #eee;
-        }
+    & .card:last-child {
+        border-bottom: 1px solid var(--light-gray);
     }
 }
+
 
 .testimonial-statement {
     font-size: 18px;
     line-height: 24px;
     padding: 20px 0 15px;
-    color: #555;
+    color: var(--medium-gray);
 
     p {
         margin: 0;
